# vnetplay

./: .gitignore  README.md  dev.cmd
.codebuddy/plans/: qq-login-integration_5eb95e50(未完成).md  ui-redesign-and-qq-login_9e84a8e1.md  vnetplay-ui-optimization_ca7da1be.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: desktop.yml  frontend.yml  server.yml
app/: build.cmd  dev.cmd  index.html  install.cmd  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
desktop/: build.cmd  dev.cmd  install.cmd  package-lock.json  package.json  tauri.cmd
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/app/commands/: mod.rs
desktop/src-tauri/src/app/services/: heartbeat_service.rs  n2n_service.rs  system_identity.rs
desktop/src-tauri/src/app/state/: mod.rs
desktop/src-tauri/src/game/: detector.rs
desktop/src-tauri/src/ipc/: models.rs
desktop/src-tauri/src/network/: edge_manager.rs  node_status.rs  route_probe.rs
docs/: architecture.md  modules.md  ui-guidelines.md
scripts/windows/: _desktop-env.cmd  _node-env.cmd  app-build.cmd  app-dev.cmd  app-install.cmd  check-all.cmd  desktop-build.cmd  desktop-dev.cmd  desktop-install.cmd  (+3 more)
server/: Cargo.toml
server/src/: main.rs
server/src/api/: router.rs
server/src/config/: mod.rs
server/src/models/: mod.rs
server/src/nodes/: mod.rs
server/src/rooms/: mod.rs
server/src/storage/: mod.rs
(+35 files in other folders)
